--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@apollo/server": "^4.11.0",
     "@nestjs/apollo": "^12.2.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-express": "^10.0.0",
@@ -32,7 +33,10 @@
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.9.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.0",
+    "psql": "^0.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
